[gd_scene load_steps=24 format=1]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://assets/player.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 4, 5 )

[sub_resource type="Animation" id=2]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=4]

resource/name = "box jump down"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 49 ]
}

[sub_resource type="Animation" id=5]

resource/name = "box jump up"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 48 ]
}

[sub_resource type="Animation" id=6]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=7]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=8]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=9]

resource/name = "cir jump down"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 53 ]
}

[sub_resource type="Animation" id=10]

resource/name = "cir jump up"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 52 ]
}

[sub_resource type="Animation" id=11]

resource/name = "cir run"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=12]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=13]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=14]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 51 ]
}

[sub_resource type="Animation" id=15]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 50 ]
}

[sub_resource type="Animation" id=16]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=17]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0.713422, 1.32983 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/player:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -5.8008, -13.6225 ), Vector2( -8, -9 ) ]
}

[sub_resource type="Animation" id=18]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate/player:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 1.413, 0.673642 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotate/player:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -11.3279, -4.44809 ), Vector2( -8, -9 ) ]
}

[sub_resource type="RectangleShape2D" id=19]

custom_solver_bias = 0.0
extents = Vector2( 4, 5 )

[sub_resource type="RectangleShape2D" id=20]

custom_solver_bias = 0.0
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=21]

custom_solver_bias = 0.0
extents = Vector2( 4, 5 )

[node name="player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="rotate" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="player" type="Sprite" parent="rotate"]

transform/pos = Vector2( -8, -9 )
texture = ExtResource( 2 )
centered = false
vframes = 7
hframes = 8
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/box idle" = SubResource( 2 )
"anims/box idle blink" = SubResource( 3 )
"anims/box jump down" = SubResource( 4 )
"anims/box jump up" = SubResource( 5 )
"anims/box run" = SubResource( 6 )
"anims/cir idle" = SubResource( 7 )
"anims/cir idle blink" = SubResource( 8 )
"anims/cir jump down" = SubResource( 9 )
"anims/cir jump up" = SubResource( 10 )
"anims/cir run" = SubResource( 11 )
"anims/tri idle" = SubResource( 12 )
"anims/tri idle blink" = SubResource( 13 )
"anims/tri jump down" = SubResource( 14 )
"anims/tri jump up" = SubResource( 15 )
"anims/tri run" = SubResource( 16 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "box idle"

[node name="anim_fx" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/jump = SubResource( 17 )
anims/land = SubResource( 18 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="collision" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="ray_1" type="RayCast2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 3, 3.5 )
enabled = true
cast_to = Vector2( 0, 2 )
layer_mask = 1
type_mask = 15
__meta__ = {
"_edit_lock_": true
}

[node name="ray_2" type="RayCast2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -3, 3.5 )
enabled = true
cast_to = Vector2( 0, 2 )
layer_mask = 1
type_mask = 15
__meta__ = {
"_edit_lock_": true
}

[node name="door_check" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 19 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 4
collision/mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="door_check"]

shape = SubResource( 19 )
trigger = false
_update_shape_index = 0

[node name="pickup_area" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 20 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -2 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0
collision/mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickup_area"]

transform/pos = Vector2( 0, -2 )
shape = SubResource( 20 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="transform_area" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 21 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="transform_area"]

shape = SubResource( 21 )
trigger = false
_update_shape_index = 0

[node name="Particles2D" type="Particles2D" parent="."]

config/amount = 84
config/lifetime = 2.0
config/emit_timeout = 2.0
config/emitting = false
config/process_mode = 1
config/local_space = false
config/explosiveness = 0.01
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 50.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.5

[connection signal="area_enter" from="door_check" to="." method="_on_door_check_area_enter"]

[connection signal="area_exit" from="door_check" to="." method="_on_door_check_area_exit"]

[connection signal="area_enter" from="pickup_area" to="." method="_on_pickup_area_area_enter"]

[connection signal="area_enter" from="transform_area" to="." method="_on_transform_area_area_enter"]


